message sending option

--- a/index.html
+++ b/index.html
@@ -314,18 +314,18 @@
 
             </div>
          </div>
-         <form action="">
+         <form action="https://formspree.io/f/mzbylyzp" method="post">
             <div class="input-wrap">
                <input type="text" placeholder="Your Name *">
-               <input type="email" placeholder="Your Email *">
+               <input type="email" name="_replytotype" placeholder="Your Email *">
             </div>
             <div class="input-wrap-2">
                <input type="text" placeholder="Subject...">
-               <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..."></textarea>
+               <textarea name="message" cols="30" rows="10" placeholder="Your Message..."></textarea>
 
             </div>
             <div class="btn btn-wrapper">
-               <button class="btn btn-primary">Send Message</button>
+               <button type="submit" class="btn btn-primary">Send Message</button>
             </div>
          </form>
 
