issue solved for name n subject

--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
          </div>
          <form action="https://formspree.io/f/mzbylyzp" method="post">
             <div class="input-wrap">
-               <input type="text" placeholder="Your Name *">
+               <input type="text" name="_replytotype" placeholder="Your Name *">
                <input type="email" name="_replytotype" placeholder="Your Email *">
             </div>
             <div class="input-wrap-2">
-               <input type="text" placeholder="Subject...">
+               <input type="text" name="_replytotype" placeholder="Subject...">
                <textarea name="message" cols="30" rows="10" placeholder="Your Message..."></textarea>
 
             </div>
