--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </nav>
             <div class="hero flex items-center justify-between">
                <div class="left flex-1 flex justify-center">
-                  <img src="./images/man.png" alt="">
+                  <img src="./images/bbg.png" alt="">
                </div>
                <div class="right flex-1">
                   <h6> Dash Purohit</h6>
@@ -107,7 +107,7 @@
             <div class="card-wrapper">
                <div class="card">
                   <!-- <img src="./images/brush.svg" alt=""> -->
-                  <i class="fas fa-paint-brush"></i>
+                  <img src="./images/code.svg" alt="">
                   <h2>Graphic Design</h2>
                   <p> Graphic design is a craft where professionals create visual content to communicate messages
                   </p>
