--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <img src="./images/bbg.png" alt="">
                </div>
                <div class="right flex-1">
-                  <h6> Dash Purohit</h6>
+                  <h6> Dashrath Purohit</h6>
                   <h1>I'm a Creative <span>Designer & Developer</span></h1>
                   <p>I am a Computer Science graduate, who always enthusiastic about the emerging technologies and also
                      passionate about creation, design, and innovating systems that makes the users life much easier and
