--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="flex-1 right">
                <h1>About <span>Me</span></h1>
-               <h3> Hello! i'm Dashrath Purohit.</h3>
+               <h3> Hello! i'm Dash Purohit.</h3>
                <p>
                   I am a Software Developer, who always enthusiastic about the emerging technologies and also
                   passionate about creation, design, and innovating systems that makes the users life much easier and
